--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,11 @@
   margin-left: 8px;
 }
 
+.form-control {
+  -webkit-box-shadow: none !important;
+  outline: -webkit-focus-ring-color auto 0px !important;
+}
+
 /* jumbotron color animation css */
 .jumbotron {
   width: 30vw;
